  SCIPintervalSolveUnivariateQuadExpressionPositiveAllScalar() now take an additional argument to specify already
  existing bounds on x, providing an entire interval ([-infinity,infinity]) gives previous behavior
- removed function SCIPgetTimingSymmetry() in presol_symmetry.h since this presolver does not compute symmetries independent
  of other components anymore

new API functions:
- added function SCIPintervalSolveUnivariateQuadExpressionNegative()

new parameters:
- "lp/checkfarkas" that enables the check of infeasibility proofs from the LP
- "heuristics/alns/unfixtol" to specify tolerance to exceed the target fixing rate before unfixing variables, (default: 0.1)
- "propagating/orbitalfixing/symcomptiming" to change the timining of symmetry computation for orbital fixing
- "propagating/orbitalfixing/performpresolving" that enables orbital fixing in presolving
- "presolving/symbreak/addconsstiming" to change the timining of symmetry computation for symmetry handling inequalities

deleted and modified parameters:
- removed parameter "heuristics/alns/stallnodefactor" as the stall nodes are now controlled
  directly by the target node limit within the heuristic
- removed parameter "presolving/symmetry/computepresolved" since this presolver does not compute symmetries independent
  of other components anymore

deleted files:
- presol_implfree removed

misc:
- updated CppAD to version 20180000.0


SCIP version 5.0.2
=================

performance improvements:
- deactivate gauge cuts

fixed bugs:
- suppress debug solution warnings during problem creation stage
- fixed check for activated debugging solution in components constraint handler
- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol