@@ -23,6 +23,8 @@ deleted and modified API functions:
   existing bounds on x, providing an entire interval ([-infinity,infinity]) gives previous behavior
 - removed function SCIPgetTimingSymmetry() in presol_symmetry.h since this presolver does not compute symmetries independent
   of other components anymore
+- the seed of SCIPinitializeRandomSeed() is now an unsigned int
+- the seed of SCIPsetInitializeRandomSeed() is now an unsigned int and it returns an unsigned int
 
 new API functions:
 - added function SCIPintervalSolveUnivariateQuadExpressionNegative()
